--- a/requirements.txt
+++ b/requirements.txt
@@ -26,8 +26,8 @@ cycler==0.12.1
 distro==1.9.0
 djhtml==3.0.7
 EditorConfig==0.12.4
-Flask==3.0.3
-Flask-Cors==5.0.0
+Flask==2.2.5
+flask-cors==3.0.10
 Flask-Session==0.8.0
 fonttools==4.54.1
 greenlet==3.1.1
