--- a/vercel.json
+++ b/vercel.json
@@ -2,12 +2,11 @@
   "version": 2,
   "builds": [
     {
-      "src": "app.py",
+      "src": "app.py",  // Path to your Flask app file
       "use": "@vercel/python"
     }
   ],
   "routes": [
-    { "src": "/static/(.*)", "dest": "static/$1" },
-    { "src": "/(.*)", "dest": "app.py" }
+    { "src": "/(.*)", "dest": "app.py" } // Route all traffic to app.py
   ]
 }
